--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tech Blog</title>
-        <link rel="stylehseet" href="/stylesheets/style.css"> 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="/stylesheets/style.css">
+        <link 
     </head>
 
     <body>
         <div class="wrapper">
             <header>
                 <nav>
-                    <a href="/homepage">Home</a>
+                    <a href="../homepage">Home</a>
                     <a href="/dashboard">Dashboard</a>
                     {{#if loggedIn}}
                     <button id="logout" class="btn-no-style">Logout</button>
@@ -21,8 +23,9 @@
                     {{/if}}
                 </nav>
                 
+                {{!-- {{#if}} --}}
                 <h1>
-                    <a href="/">Tech Blog</a>
+                    <a href="/">The Tech Blog</a>
                 </h1>
 
             </header>
