--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,14 +1,18 @@
-<section>
-    <h2>+ New Post</h2>
-
-    <form class="new-post-form">
-        <div>
-            <label for="post-title">Title</label>
-            <input type="text" id="post-title" name="post-title"/>
-        </div>
-
-        <div>
-            <label for="post-url"></label>
-        </div>
-    </form>
-</section>
+<div class="container">
+    <section class="row posts">
+        {{#if posts.length}}
+        <secion>
+            {{#each posts as |post|}}
+                {{> post-info post}}
+            {{/each}}
+        </secion>
+        {{else}}
+        <p class="no-posts">
+            There aren't any posts yet! Feel free to add one!
+        </p>
+        {{/if}}
+    </section>
+    <div class="row">
+        <a href="/dashboard/newpost" class="btn new-post-btn" role="button">+ New Post</a>
+    </div>
+</div>
