--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,35 +7,37 @@
         <title>Tech Blog</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="stylesheet" href="/stylesheets/style.css">
-        <link 
+        <link rel="stylesheet" href="/stylesheets/login.css">
     </head>
 
     <body>
         <div class="wrapper">
             <header>
-                <nav>
-                    <a href="/">Home</a>
-                    <a href="/login">Dashboard</a>
+                <nav class="flex">
+                    <a href="/" class="btn" role="button">Home</a>
                     {{#if loggedIn}}
-                    <a href="/dashboard">Dashboard</a>
-                    <button id="logout" class="btn-no-style">Logout</button>
+                    <a href="/dashboard" class="btn" role="button">Dashboard</a>
+                    <button id="logout" role="button" class="btn">Logout</button>
                     {{else}}
-                    <a href="/login">Login</a>
+                    <a href="/login" role="button" class="btn">Login</a>
                     {{/if}}
                 </nav>
                 
-                {{!-- {{#if}} --}}
-                <div class="row col-3 d-inline-flex container rounded">
+                <div class="row col-3 d-inline-flex container rounded title">
+                    {{#if homepage}}
                     <h1 class="rounded">The Tech Blog</h1>
+                    {{else}}
+                    <h1 class="rounded">Your Dashboard</h1>
+                    {{/if}}
+                    
                 </div>
-
             </header>
 
             <main>
                 {{{ body }}}
             </main>
-            <footer>
-                Made by Andrew Kim
+            <footer class="footer">
+                © 2022 by Andrew Kim
             </footer>
         </div>
 
