--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,36 +1,39 @@
-<form class="login-form">
-    <div>
-        <label for="email-login">Email:</label>
-        <input type="text" id="email-login"/>
-    </div>
+  <body>
+    <div class="loginForm">
+      <input type="checkbox" id="cam" aria-hidden="true" />
 
-    <div>
-        <label for="password-login">Password:</label>
-        <input type="password" id="password-login"/>
-    </div>
+      <div class=" signup-form signup">
+        <form>
+          <label for="cam" aria-hidden="true">Sign up</label>
+          <input type="text" id="username-signup"  placeholder="User name" required="" />
+          <input type="email" id="email-signup" placeholder="Email" required="" />
+          <input
+            type="password"
+            id="password-signup"
+            name="pswd"
+            placeholder="Password"
+            required=""
+          />
+          <button class="signup-button">Sign up</button>
+        </form>
+      </div>
 
-    <div>
-        <button type="submit">Login!</button>
+      <div class="login-form login">
+        <form>
+          <label for= "cam" aria-hidden="true">Login</label>
+          <input type="email" id="email-login" placeholder="Email" required="" />
+          <input
+            type="password"
+            id="password-login"
+            name="pswd"
+            placeholder="Password"
+            required=""
+          />
+          <button class="login-button">Login</button>
+        </form>
+      </div>
     </div>
-</form>
+  </body>
+</html>
 
-<form class="signup-form">
-    <div>
-        <label for="username-signup">Username:</label>
-        <input typ="text" id="username-signup"/>
-    </div>
-
-    <div>
-        <label for="email-signup">Email:</label>
-        <input type="text" id="email-signup"/>
-    </div>
-
-    <div>
-        <label for="password-signup">Password:</label>
-        <input type="password" id="password-signup"/>
-    </div>
-
-    <div>
-        <button type="submit">Sign Up!</button>
-    </div>
-</form>
+<script src="javascript/login.js"></script>
