--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,10 +1,4 @@
-<article class="post">
-    <div class="title">
-        <a href="{{post_content}}" target="_blank">{{title}}</a>
-        <p>({{format_url post_content}})</p>
-    </div>
-
-    <div class="meta">
-        <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
-    </div>
-</article>
+<div>
+    <a href="{{post_content}}" target="_blank">{{title}}</a>
+    <p>{{formate_date created_at}}</p>
+</div>
