--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,4 +1,4 @@
-<div>
-    <a href="{{post_content}}" target="_blank">{{title}}</a>
-    <p>{{formate_date created_at}}</p>
-</div>
+<a class="post-form row rounded" role="button" href="/dashboard/{{id}}">
+    <p class="posts-title col">{{title}}</p>
+    <p class="col post-date">{{formate_date created_at}}</p>
+</a>
