--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,9 +1,9 @@
 <div>
     <form class="new-post-form" id="newPostForm">
-        <h2>Create New Post</h1>
-        <h3>Title</h2>
+        <h2 class="create-new-post">Create New Post</h2>
+        <h3 class="new-post-input">Title</h3>
         <input class="new-post-content" id="title" name="title" type="text" placeholder="Title..." required=""/>
-        <h3>Content</h2>
+        <h3 class="new-post-input">Content</h3>
         <input class="new-post-content" id="content" name="content" type="text" placeholder="Content..." required=""/>
 
         <button type="submit">Create</button>
