--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -4,7 +4,7 @@
         <h3 class="new-post-input">Title</h3>
         <input class="new-post-content" id="title" name="post-title" type="text" value="{{post.title}}" />
         <h3 class="new-post-input">Content</h3>
-        <input class="new-post-content" id="content" name="post-content" type="text" value="{{post.post_content}}" />
+        <textarea class="new-post-content" id="content" name="post-content" rows="4">{{post.post_content}}</textarea>
         <button id="save-edit-btn">Save Post</button>
         <button type="button" id="delete-post-btn">Delete Post</button>
     </form>
