--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
     <section class="row posts">
         {{#if posts.length}}
             {{#each posts as |post|}}
-                {{> post-info post}}
+                {{> post-info-edit post}}
             {{/each}}
         {{else}}
         <p class="no-posts">
