--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,5 @@
-<ol class="post-list">
+<section class="homepage-post-form row rounded">
     {{#each posts as |post|}}
-    <li>
         {{> post-info post}}
-    </li>
     {{/each}}
-</ol>
+</section>
