--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -2,11 +2,11 @@
     <form class="new-post-form" id="newPostForm">
         <h2 class="create-new-post">Create New Post</h2>
         <h3 class="new-post-input">Title</h3>
-        <input class="new-post-content" id="title" name="title" type="text" placeholder="Title..." required=""/>
+        <input class="new-post-title form-control-lg" id="title" name="title" type="text" placeholder="Title..." required=""/>
         <h3 class="new-post-input">Content</h3>
-        <input class="new-post-content" id="content" name="content" type="text" placeholder="Content..." required=""/>
+        <textarea class="new-post-content form-control" rows="6" id="content" name="content" placeholder="Content..." required=""></textarea>
 
-        <button type="submit">Create</button>
+        <button class="create-btn rounded btn" type="submit">Create</button>
     </form>
 </div>
 
