allowed user to create a comment on already existing posts

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -139,6 +139,14 @@ body {
     font-size: 20px;
 }
 
+.comment-title {
+    display: flex;
+    justify-content: left;
+    background-color: var(--prim-color);
+    color: var(--sec-color);
+    font-size: 20px;
+}
+
 .no-posts {
     font-size: 35px;
 }
