--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,11 +1,17 @@
 <div>
     {{> post-info post}}
 
+    {{> comments post.comments}}
+
     {{#if loggedIn}}
-    <form class="homepage-single-post">
+    <form class="homepage-single-post" id="comment-form">
         <h4 class="create-new-post">Comment</h4>
-        <textarea class="new-post-content form-control" rows="4"></textarea>
+        <textarea name="comment-body" class="new-post-content form-control" rows="4"></textarea>
         <button type="submit" class="create-btn rounded btn">Add Comment</button>
     </form>
     {{/if}}
 </div>
+
+{{#if loggedIn}}
+<script src="/javascript/comment.js"></script>
+{{/if}}
